<resources>
    <string name="app_name">Groshop</string>
    <string name="text_or_sign_in_with">Or Sign In with</string>
    <string name="button_text_sign_in">Sign In</string>
    <string name="button_text_forgot_password">Forgot Password?</string>
    <string name="hint_text_password">Password</string>
    <string name="hint_text_email">Email</string>
    <string name="text_fill_up">Fill the field below to Sign In</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_already_have_an_account">Already have an account?</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_privacy_policy">I have read and agree to the Privacy Policy</string>
    <string name="text_or_sign_up_with">Or Sign Up With</string>
    <string name="text_fill_up_sign_up">Fill the details and create your new account</string>
    <string name="text_didn_t_have_an_account">Didn’t have an account? Sign Up</string>
    <string name="text_groshop">Groshop</string>
    <string name="button_text_sign_up">Sign Up</string>
    <string name="text_already_sign_in">Already have an account? Sign In</string>
    <string name="text_onboard_details">No more waiting for your groceries to be delivered</string>
    <string name="text_already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="text_detail">No more waiting for your groceries to be delivered</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_authorization">Enter your phone number to verify it’s you, and we will send you a one-time authorization code.</string>
    <string name="text_country_code">+62</string>
    <string name="hint_your_phone_number">Your Phone Number</string>
    <string name="button_text_next">Next</string>
    <string name="text_verify_your_number">Verify Your Number</string>
    <string name="text_code_detail">4 digit code send to</string>
    <string name="text_number">+62 (302) **** ****</string>
    <string name="text_resend">Resend in 00:50</string>
    <string name="button_text_verify">Verify</string>
    <string name="text_reset_password_detail">Your new password must be different from your previous password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="button_text_reset_password">Reset Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="text_successful">Successful</string>
    <string name="text_verify">Your account has been verified</string>
    <string name="button_text_ready_to_shop">Ready To Shop</string>
    <string name="text_password_change">Your password has changed now</string>
    <string name="button_text_back_to_home">Back To Home</string>
    <string name="text_orange">Orange</string>
    <string name="text_discount_10">10%</string>
    <string name="text_quantity">1 kg</string>
    <string name="text_normal_price">$7.50</string>
    <string name="text_discount_price">$6.75</string>
    <string name="text_offer">Get special offer up to 25%</string>
    <string name="text_offer_date">at 25 – 31 March 2022</string>
    <string name="text_fruit">Fruit</string>
    <string name="greeting_text_home_toolbar">Hello Sharon</string>
    <string name="intro_text_home_toolbar">what would you buy today</string>
</resources>