<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResetPasswordDetails"
            style="@style/base_text_h3_raleway_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:fontFamily="@font/merriweather_light"
            android:text="@string/text_reset_password_detail"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            app:layout_constraintBottom_toTopOf="@id/confirmResetInputLayout"
            app:layout_constraintEnd_toEndOf="@id/tvResetPasswordDetails"
            app:layout_constraintStart_toStartOf="@id/tvResetPasswordDetails"
            app:layout_constraintTop_toBottomOf="@id/tvResetPasswordDetails"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReset"
                android:textSize="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmResetInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@id/btnResetPassword"
            app:layout_constraintEnd_toEndOf="@id/tvResetPasswordDetails"
            app:layout_constraintStart_toStartOf="@id/tvResetPasswordDetails"
            app:layout_constraintTop_toBottomOf="@id/resetInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmReset"
                android:textSize="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_confirm_new_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnResetPassword"
            style="@style/primary_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/button_text_reset_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvResetPasswordDetails"
            app:layout_constraintStart_toStartOf="@id/tvResetPasswordDetails"
            app:layout_constraintTop_toBottomOf="@id/confirmResetInputLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>