<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvVerifyNumberTitle"
            style="@style/base_text_h2_raleway_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/text_verify_your_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCodeDetails"
            style="@style/base_text_h3_raleway_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/merriweather_light"
            android:textAlignment="center"
            android:textColor="#8A8A8A"
            android:text="@string/text_code_detail"
            app:layout_constraintEnd_toEndOf="@id/tvVerifyNumberTitle"
            app:layout_constraintStart_toStartOf="@id/tvVerifyNumberTitle"
            app:layout_constraintTop_toBottomOf="@id/tvVerifyNumberTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumber"
            style="@style/base_text_h3_raleway_semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/merriweather_bold"
            android:text="@string/text_number"
            android:textAlignment="center"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="@id/tvVerifyNumberTitle"
            app:layout_constraintStart_toStartOf="@id/tvVerifyNumberTitle"
            app:layout_constraintTop_toBottomOf="@id/tvCodeDetails" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCode1"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:maxLength="1"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_otp"
            android:inputType="number"
            android:gravity="center"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:fontFamily="@font/merriweather_bold"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintStart_toStartOf="@id/tvVerifyNumberTitle"
            app:layout_constraintEnd_toStartOf="@id/etCode2"
            app:layout_constraintTop_toBottomOf="@id/tvNumber"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCode2"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:maxLength="1"
            android:imeOptions="actionNext"
            android:background="@drawable/bg_otp"
            android:inputType="number"
            android:fontFamily="@font/merriweather_bold"
            android:textSize="@dimen/_24sdp"
            android:gravity="center"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintStart_toEndOf="@id/etCode1"
            app:layout_constraintEnd_toStartOf="@id/etCode3"
            app:layout_constraintTop_toTopOf="@id/etCode1"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCode3"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:maxLength="1"
            android:background="@drawable/bg_otp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:gravity="center"
            android:fontFamily="@font/merriweather_bold"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintStart_toEndOf="@id/etCode2"
            app:layout_constraintEnd_toStartOf="@id/etCode4"
            app:layout_constraintTop_toTopOf="@id/etCode1"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCode4"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:imeOptions="actionDone"
            android:maxLength="1"
            android:background="@drawable/bg_otp"
            android:inputType="number"
            android:fontFamily="@font/merriweather_bold"
            android:textSize="@dimen/_24sdp"
            android:gravity="center"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintStart_toEndOf="@id/etCode3"
            app:layout_constraintEnd_toEndOf="@id/tvVerifyNumberTitle"
            app:layout_constraintTop_toTopOf="@id/etCode1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResendTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            style="@style/base_text_h3_raleway_semibold"
            android:fontFamily="@font/merriweather"
            android:textColor="#8A8A8A"
            android:textSize="@dimen/_12sdp"
            android:text="@string/text_resend"
            app:layout_constraintTop_toBottomOf="@id/etCode4"
            app:layout_constraintEnd_toEndOf="@id/etCode4"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            style="@style/primary_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/button_text_verify"
            app:layout_constraintEnd_toEndOf="@id/tvVerifyNumberTitle"
            app:layout_constraintStart_toStartOf="@id/tvVerifyNumberTitle"
            app:layout_constraintTop_toBottomOf="@id/tvResendTimer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>